# Criado botão de acesso a apresentação da Jornada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
     </h3>
 
     <p>Participação de uma "mesa redonda", junto com outros egressos da faculdade,
-      com os alunos do curso de Sistemas de Informação afim de mostrar as pespectivas do mercado de TI.</p>
+      com os alunos do curso de Sistemas de Informação afim de mostrar as nuances e pespectivas
+      do mercado de TI.</p>
+
+    <section id="acessoJornada">
+      <a href="xi-jornada-cientifica/index.html" class="btn">Acessar</a>
+    </section>
 
     <h3>
       <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true">
