# Criação dos slides da apresentação

--- a/xi-jornada-cientifica/index.html
+++ b/xi-jornada-cientifica/index.html
@@ -35,23 +35,168 @@
 	<div class="slides">
 
 		<section>
+            <br />
+            <br />
 			<h1>A Jornada do Desenvolvedor</h1>
-            <h2 style="color: #40FF00">De Padawan <strike>a aspirante</strike> a Jedi</h2>
-			<h2>by Josimar Silva, 2015</h2>
+            <h2 style="color: #40FF00">De Padawan a aprendiz Jedi</h2>
+
 		</section>
 
         <section>
-            <h2>Sobre mim</h2>
-            <br/>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+
+            <h2>
+                <img src="images/quem_e_esse_cara.jpg" width="500px" height="500px" />
+            </h2>
+            <br />
+        </section>
+
+        <section>
+            <h2>
+                <img src="images/its_me.jpg" width="250px" height="250px" />
+                <br />
+                <span style="color: #40FF00">Oi, eu sou o Josimar!</span>
+            </h2>
+            <h3>
+                Bacharel em S. de Informação por Formação
+                <br />
+                Desenvolvedor por <span>Paixão</span>
+                <br />
+                Pos-Graduando em S. para Web
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                <img border="1px;" style="border: black;" src="images/the_road_so_far.jpg" />
+            </h2>
+
             <br />
             <br />
+            <br />
+
+            <h2>
+                <span style="color: blue;">2010</span> - Início da jornada
+            </h2>
+
+        </section>
+
+        <section>
+            <h2>
+                <img border="1px;" style="border: black;" src="images/the_road_so_far.jpg" />
+            </h2>
+
+            <h3>
+                <img border="1px;" style="border: black;" src="images/2012.jpg" width="400px;" />
+                <br />
+                <span style="color: blue;">2012/2013</span> - Programador na CapuL
+                <br />
+                (Obrigado Romulo!)
+                <br />
+                <img src="images/romulo1.jpg" width="170px;">
+            </h3>
+
+        </section>
+        <section>
+            <h2>
+                <img border="1px;" style="border: black;" src="images/the_road_so_far.jpg" />
+            </h2>
+            <h3>
+                <br />
+                <br />
+                <span style="color: blue;">2014</span> Desenvolvedor Java Junior na NT Soluções
+                <br />
+                <br />
+                (Obrigado novamente Romulo e ao Sensei Diego!)
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                <img border="1px;" style="border: black;" src="images/the_road_so_far.jpg" />
+            </h2>
+            <h3>
+                <br />
+                <br />
+                <span style="color: blue;">2015</span> Desenvolvedor Java Pleno na 3Way Networks
+                <br />
+                <br />
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+               Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Uma visão de pessoal</span>
+                <br />
+                <br />
+                <img src="images/comecar.jpg" width="400px;">
+                <br />
+                <br />
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Uma visão de pessoal</span>
+                <br />
+                <br />
+                <img src="images/salarios.jpg" width="400px;">
+                <br />
+                <br />
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                Lições Aprendidas
+            </h2>
+            <h2>
+                <br />
+                <span style="color: blue">Aprenda inglês!</span>
+                <br />
+                <img src="images/aprenda_ingles.png">
+            </h2>
+        </section>
+
+        <section>
+            <h2>
+                Lições Aprendidas
+            </h2>
+            <h2>
+                <br />
+                <span style="color: blue"> Não se limite!</span>
+                <br />
+                <img src="images/tdc_2012.jpg" width="550px;">
+            </h2>
+        </section>
+
+        <section>
+            <h2>
+                Lições Aprendidas
+            </h2>
+            <h2>
+                <br />
+                <span style="color: blue">Contribua com projetos open-source!</span>
+                <br />
+                <img src="images/contribua.gif" width="400px;"/>
+                <br />
+                <span style="font-size: 15px;">Open source é bom para mim. Vou abraçar totalmente isso.</span>
+                <br />
+            </h2>
+        </section>
+
+
+        <section>
             <h2>Onde me encontrar?</h2>
             <ul>
+                <li>Gmail: <a href="mailto:josimaralves.ti@gmail.com">josimaralves.ti@gmail.com</a></li>
                 <li>Twitter: <a href="http://twitter.com/devpadawan">@devpadawan</a></li>
                 <li>LinkedIn: <a href="https://br.linkedin.com/pub/josimar-silva/41/388/870">Josimar Silva</a></li>
             </ul>
