--- a/xi-jornada-cientifica/index.html
+++ b/xi-jornada-cientifica/index.html
@@ -131,6 +131,34 @@
             <h3>
                 <span style="color: blue">Sob a pespectiva de um dev</span>
                 <br />
+                <img src="images/developers.jpg" width="800px;">
+                <br />
+                <br />
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Sob a pespectiva de um dev</span>
+                <br />
+                <img src="images/carreira.png" width="800px;">
+                <br />
+                <br />
+            </h3>
+        </section>
+
+        <section>
+            <h2>
+                Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Sob a pespectiva de um dev</span>
+                <br />
                 <br />
                 <img src="images/comecar.jpg" width="400px;">
                 <br />
@@ -147,9 +175,60 @@
                 <span style="color: blue">Sob a pespectiva de um dev</span>
                 <br />
                 <br />
+                <img src="images/certificacaoes.jpg" width="500px;">
+                <br />
+                <br />
+            </h3>
+        </section>
+
+
+        <section>
+            <h2>
+                Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Sob a pespectiva de um dev</span>
+                <br />
+                <br />
                 <img src="images/salarios.jpg" width="400px;">
                 <br />
                 <br />
+            </h3>
+        </section>
+
+
+        <section>
+            <h2>
+                Carreira e Mercado
+            </h2>
+
+            <h3>
+                <span style="color: blue">Salários</span>
+            </h3>
+                <br />
+                <span style="color: black">Sênior</span>
+                <br />
+                 P/M: Salário de 2015: R$6.500 – 10.000
+
+                <br />
+                 G:   Salário de 2015: R$8.000 – 12.000
+                <br />
+
+                <span style="color: black;">Pleno:</span>
+                <br />
+                P/M: Salário de 2015: R$4.500 – 6.500
+                <br />
+                G:   Salário de 2015: R$5.000 – 8.000
+                <br />
+                <span style="color: yellow;">Júnior:</span>
+                <br />
+                P/M: Salário de 2015: R$3.500 – 5.000
+                <br />
+                G:   Salário de 2015: R$3.500 – 6.500
+                <br />
+                <br />
+                <span style="size: 2px;">Fonte: www.exame.com</span>
             </h3>
         </section>
 
@@ -197,9 +276,15 @@
             <h2>Onde me encontrar?</h2>
             <ul>
                 <li>Gmail: <a href="mailto:josimaralves.ti@gmail.com">josimaralves.ti@gmail.com</a></li>
-                <li>Twitter: <a href="http://twitter.com/devpadawan">@devpadawan</a></li>
-                <li>LinkedIn: <a href="https://br.linkedin.com/pub/josimar-silva/41/388/870">Josimar Silva</a></li>
+                <li>Twitter: <a href="http://twitter.com/devpadawan">@DevPadawan</a></li>
+                <li>Github: <a href="https://www.github.com/devpadawan">@devpadawan</a></li>
             </ul>
+        </section>
+
+        <section>
+            <br />
+            <h2>Obrigado!</h2>
+            <img src="images/thank_you.jpg">
         </section>
 
 		</div>
