Adicionado link da palestra de Java 8 na pagina principal

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <div class="container">
   <section id="main_content">
     <h3>
-      <a id="welcome-to-github-pages" class="anchor" href="http://inesc.br/jornada-cientifica-2015/" aria-hidden="true">
+      <a id="welcome-to-github-pages" class="anchor" href="http://inesc.br/jornada-cientifica-2015/eventos/visualizar_evento.php?data=29/05/2015" aria-hidden="true">
         <span class="octicon octicon-link"></span>
+        2015 - XI Jornada Científica Cultural e Social do INESC
       </a>
-      2015 - XI Jornada Científica Cultural e Social do INESC
     </h3>
 
-    <p>Participação de uma "mesa redonda", junto com outros egressos da faculdade,
+    <p>Participação de uma mesa redonda, junto com outros egressos da faculdade,
       com os alunos do curso de Sistemas de Informação afim de mostrar as nuances e pespectivas
       do mercado de TI.</p>
 
@@ -38,9 +38,23 @@
     </section>
 
     <h3>
+      <a id="java-8" class="anchor" href="http://faculdadecnecunai.com.br/jornada-cientifica-2016/eventos/visualizar_evento.php?data=24/05/2016" aria-hidden="true">
+        <span class="octicon octicon-link"></span>
+        2016 - Mini-curso: Java 8 na prática
+      </a>
+    </h3>
+
+    <p>Ministrando um mini-curso sobre Java 8 na XI Jornada Científica Cultural e Social do INESC</p>
+
+    <section id="mini-curso-java-8">
+      <a href="java-8-na-pratica/index.html" class="btn">Acessar</a>
+    </section>
+
+    <h3>
       <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true">
         <span class="octicon octicon-link"></span>
-      </a>Contatos</h3>
+      </a>Contatos
+    </h3>
       <p>
         <a href="https://twitter.com/DevPadawan">Twitter</a>
       </p>
