Corrigido nome da nome jornada cientifica

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </a>
     </h3>
 
-    <p>Ministrando um mini-curso sobre Java 8 na XI Jornada Científica Cultural e Social do INESC</p>
+    <p>Ministrando um mini-curso sobre Java 8 na XII Jornada Científica Cultural e Social do INESC</p>
 
     <section id="mini-curso-java-8">
       <a href="java-8-na-pratica/index.html" class="btn">Acessar</a>
