Adicionado link do repositorio do projeto na apresentação sobre Java 8

--- a/java-8-na-pratica/index.html
+++ b/java-8-na-pratica/index.html
@@ -61,7 +61,7 @@
 		<section>
 			<img width="" height="" src="images/java-name.jpg">
 			<br />
-			<span style="color: #2EC94B; font-size: 50px;">Write Once, Run Anywhere</span>
+			<span style="color: #2EC94B; font-size: 50px;">Write Once. Run Anywhere.</span>
 		</section>
 
 		<section>
@@ -121,7 +121,8 @@
 		</section>
 
 		<section>
-			<img width="750px" height="570px" src="images/lets-code.jpg">
+			<img width="650px" height="470px" src="images/lets-code.jpg">
+			<h5 style="color: #630FF5"> <a target="_blank" href="https://github.com/devpadawan/java-8-super-herois"> https://github.com/devpadawan/java-8-super-herois </a> </h5>
 		</section>			
 
 		</div>
